--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ a {
   text-align: center;
   padding-top: 190px;
   padding-bottom: 200px;
+  background-image: url(../images/Header-img-opt.jpg);
   background: rgba(47, 48, 58, 0.8);
 }
 .hero-title {
@@ -293,10 +294,16 @@ a {
   display: flex;
   margin-top: 50px;
 }
-.our-team-list li:not(:first-child) {
+.our-team-item:not(:first-child) {
   margin-left: 30px;
 }
-.our-team-list h3 {
+.our-team-item {
+  background: #ffffff;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+.our-team-item h3 {
   margin: 0;
   margin-top: 30px;
   font-weight: 500;
