--- a/css/styles.css
+++ b/css/styles.css
@@ -86,8 +86,20 @@ a {
   margin: 0;
   margin-left: 85px;
 }
+.nav-list-item {
+  display: flex;
+}
 .nav-list-item:not(:last-child) {
   margin-right: 50px;
+}
+.nav-list-item a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  height: 4px;
+  width: 100%;
+  background-color: var(--accent-text-color);
+  border-radius: 50%;
 }
 
 .container {
@@ -165,7 +177,9 @@ a {
   text-align: center;
   padding-top: 190px;
   padding-bottom: 200px;
-  background: rgba(47, 48, 58, 0.8);
+  margin-left: auto;
+  margin-right: auto;
+  background: rgba(73, 86, 223, 0.8);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
@@ -203,7 +217,7 @@ a {
 }
 .hero-link:focus,
 .hero-link:hover {
-  color: var(--accent-text-color);
+  box-shadow: 4px 4px 4px var(--title-text-color);
 }
 /* Наши преимущества */
 .advantages-section {
@@ -470,6 +484,9 @@ footer .logo-seconf-half {
 .container-join-us {
   margin-left: 69px;
 }
+.container-join-us .networks {
+  margin-bottom: 0px;
+}
 .offer-to-join-us {
   margin: 0;
   font-weight: 700;
@@ -495,7 +512,13 @@ footer .logo-seconf-half {
   border-radius: 50%;
 }
 .container-subscribe {
+  display: flex;
+  flex-direction: column;
   margin-left: 94px;
+}
+.secondary-container-subscribe {
+  display: flex;
+  margin-top: 16px;
 }
 .offer-to-subscribe {
   margin: 0;
@@ -532,18 +555,29 @@ footer .logo-seconf-half {
 }
 .subscribe-icon {
   margin-left: 10px;
+  fill: var(--secondary-text-color);
 }
 .container-subscribe-link {
+  margin-left: 12px;
+  min-width: 200px;
   display: flex;
   flex-direction: row;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 29px;
+  background-color: var(--accent-text-color);
 }
-.subscribe-link:focus,
-.subscribe-link:hover {
+.container-subscribe-link:focus,
+.container-subscribe-link:hover {
+  box-shadow: 4px 4px 4px black;
+}
+/*.container-subscribe-link:focus .subscribe-link,
+.container-subscribe-link:focus .subscribe-icon,
+.container-subscribe-link:hover .subscribe-link,
+.container-subscribe-link:hover .subscribe-icon {
   color: var(--accent-text-color);
-}
+  fill: var(--accent-text-color);
+}*/
 
 .container-developer {
   height: 60px;
