--- a/css/styles.css
+++ b/css/styles.css
@@ -92,15 +92,6 @@ a {
 .nav-list-item:not(:last-child) {
   margin-right: 50px;
 }
-.nav-list-item a::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  height: 4px;
-  width: 100%;
-  background-color: var(--accent-text-color);
-  border-radius: 50%;
-}
 
 .container {
   padding-left: 15px;
@@ -636,6 +627,11 @@ footer .logo-seconf-half {
 }
 .portfolio-item {
   width: 370px;
+}
+.portfolio-item:hover,
+.portfolio-item:focus {
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 .portfolio-item:not(:nth-child(3n + 1)) {
   margin-left: 30px;
